# lumen

./: .gitignore  Makefile  README.md  TODO.md  index.html  install.ps1  install.sh  package-lock.json  package.json  uninstall.sh  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: clipboard.rs  mod.rs  proactive.rs
src-tauri/src/commands/: auth.rs  calendar.rs  chat.rs  dashboard.rs  mod.rs  settings.rs  setup.rs  vision.rs  window.rs
src-tauri/src/crypto/: encryption.rs  mod.rs
src-tauri/src/database/: connection.rs  mod.rs  queries.rs  schema.rs
src-tauri/src/gemini/: client.rs  mod.rs  prompt.rs  tools.rs
src-tauri/src/integrations/: gemini_tts.rs  google_calendar.rs  google_gmail.rs  google_tasks.rs  mod.rs
src-tauri/src/memory/: core.rs  extractor.rs  mod.rs  reflection.rs
src-tauri/src/oauth/: google.rs
src/components/: CalendarView.tsx
src/components/setup/: SetupWizard.tsx
src/pages/: Dashboard.tsx  Integrations.tsx  Settings.tsx
src/windows/: MainWindow.tsx  OverlayWindow.tsx  SnipperWindow.tsx  WidgetWindow.tsx
